# rura

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  dist-workspace.toml
.github/workflows/: build.yml  release.yml
src/: app.rs  args.rs  cmd_runner.rs  completable_input.rs  completion.rs  config.rs  content_widget.rs  debouncer.rs  details_widget.rs  file_saver.rs  help_widget.rs  history.rs  main.rs  output_widget.rs  presets_widget.rs  rura.rs  rura_input.rs  rura_widget.rs  save_to_file_widget.rs  search_widget.rs  state.rs  stdin.rs  theme.rs  uicmd.rs
src/shell/: cached_runner.rs  cmd_runner.rs  exec.rs  mod.rs  output.rs  pipeline_runner.rs  simple_runner.rs  split_runner.rs
src/snapshots/: rura__app__tests__command_input.snap  rura__app__tests__live_mode_confirm.snap  rura__app__tests__live_mode_full_confirm.snap  rura__app__tests__main_screen.snap  rura__app__tests__main_screen_help.snap  rura__app__tests__main_screen_help_large_screen.snap  rura__app__tests__main_screen_help_narrow_screen.snap  rura__app__tests__main_screen_help_small_screen.snap  rura__app__tests__save_command_popup.snap  rura__app__tests__save_output_popup.snap  rura__app__tests__save_popup.snap  rura__app__tests__show_details.snap  rura__app__tests__show_details_cmd_top.snap  rura__content_widget__tests__after.snap  rura__content_widget__tests__before.snap  rura__content_widget__tests__content_follow.snap  rura__content_widget__tests__scroll up line.snap  rura__content_widget__tests__shorter_content_after.snap  rura__content_widget__tests__vertical_shorter_content_after.snap  rura__content_widget__tests__vertical_shorter_content_before.snap  rura__details_widget__test__empty_run.snap  rura__details_widget__test__non_empty_run.snap  rura__presets_widget__tests__delete.snap  rura__presets_widget__tests__new_empty.snap  rura__presets_widget__tests__no_presets.snap  rura__presets_widget__tests__presets.snap  rura__rura_widget__tests__command_input_multiline_render.snap  rura__save_to_file_widget__tests__save_exists_cancel_overwrite.snap  rura__save_to_file_widget__tests__save_exists_show_overwrite_confirm.snap  rura__save_to_file_widget__tests__save_success.snap
