[package]
name = "rura"
version = "1.8.0"
license = "MIT"
edition = "2024"
description = "Interactive TUI pipeline editor built for rapid iteration"
repository = "https://github.com/tlipinski/rura"
homepage = "https://github.com/tlipinski/rura"
authors = ["Tomasz Lipiński"]
categories = ["command-line-utilities", "development-tools"]
keywords = ["tui", "terminal", "shell", "pipeline", "interactive"]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rura", dest = "/usr/bin/rura", mode = "755" },
    { source = "LICENSE", dest = "/usr/share/licenses/rura/LICENSE", mode = "644", doc = true },
    { source = "README.md", dest = "/usr/share/doc/rura/README.md", mode = "644", doc = true },
    { source = "CHANGELOG.md", dest = "/usr/share/doc/rura/CHANGELOG.md", mode = "644", doc = true },
    { source = "rura.svg", dest = "/usr/share/icons/hicolor/scalable/apps/rura.svg", mode = "644" }
]

[package.metadata.deb]
assets = [
    ["target/release/rura", "usr/bin/rura", "755"],
    ["LICENSE", "usr/share/doc/rura/copyright", "644"],
    ["README.md", "usr/share/doc/rura/README.md", "644"],
    ["CHANGELOG.md", "usr/share/doc/rura/CHANGELOG.md", "644"],
    ["rura.svg", "usr/share/icons/hicolor/scalable/apps/rura.svg", "644"],
]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.10"
ratatui = { version = "0.30.2", features = ["unstable-rendered-line-info"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
tui-input = "0.15.3"
log = "0.4.33"
crossterm = { version = "0.29.0" }
unicode-width = "0.2.2"
itertools = "0.15.0"
regex = "1.12.4"
anyhow = "1.0.102"
cfg-if = "1.0.4"
similar = { version = "3.1.1", features = ["inline"] }

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }

[dev-dependencies]
insta = "1.48.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.release]
publish = false